--- a/src/web/views/student/student-catalog.hbs
+++ b/src/web/views/student/student-catalog.hbs
@@ -86,7 +86,7 @@
             {{/each}}
         </ul>
 
-        <button class="show-absence-btn btn btn-sm btn-primary ml-4">Adauga absente</button>
+        <button class=" show-absence-btn btn btn-sm btn-primary ml-4">Adauga absente</button>
 
         <div class="absence-create-container ml-4 mt-1" data-test="bbb"></div>
     </div>
@@ -148,4 +148,5 @@
     {{#section 'script'}}
     {{!-- <script type="text/javascript" src="/views/student/student-catalog.js" defer></script> --}}
     <script type="module" src="/views/student/student-catalog.js"></script>
+    <script type="module" src="/views/student/catalog.action-handlers.js"></script>
     {{/section}}
