--- a/src/web/views/catalog/catalog.hbs
+++ b/src/web/views/catalog/catalog.hbs
@@ -63,14 +63,13 @@
     <a href="/clase/{{currentClass.id}}">{{currentClass.name}}</a>
 </h5>
 
-{{#each allSubjects}}
+{{#each subjects}}
 
 {{!-- {{{toJSON this}}}
 <div>--------</div>
 {{toJSON this}} --}}
-<div id="{{subject.id}}" class="subject-container" data-subject-id="{{subject.id}}"
-    data-subject-name="{{subject.name}}">
-    <h3 class="font-weight-normal mt-5">{{subject.name}}</h3>
+<div id="{{id}}" class="subject-container" data-subject-id="{{id}}" data-subject-name="{{name}}">
+    <h3 class="font-weight-normal mt-5">{{name}}</h3>
 
     <div class="absences-container ml-4 mt-4">
         <div class="font-weight-bold">Absente:</div>
