save absences in db

--- a/src/web/views/catalog/catalog.hbs
+++ b/src/web/views/catalog/catalog.hbs
@@ -84,9 +84,8 @@
             {{/each}}
         </ul>
 
-        <div class="ml-4 mt-1">
-            <button class="expand-add-absence-btn btn btn-sm btn-primary">Adauga absente</button>
-        </div>
+        <button class="expand-add-absence-btn btn btn-sm btn-primary ml-4 mt-1">Adauga absente</button>
+
     </div>
 
     <div class="marks-container ml-4 mt-4" data-test="aaa">
