--- a/src/web/views/catalog/catalog.hbs
+++ b/src/web/views/catalog/catalog.hbs
@@ -17,7 +17,7 @@
         border-color: #ffc107;
     }
 
-    .absence-add-form {
+    .add-form {
         padding-left: 8px;
         background: #ffe6cb;
     }
@@ -80,10 +80,29 @@
         font-size: 1.4em;
     }
 
-    .absence-value-span {
+    .absence-date-span {
         display: inline-block;
         width: 60px;
-        vertical-align: middle;
+    }
+
+    .mark-date-span {
+        display: inline-block;
+        width: 70px;
+    }
+
+    .mark-value-span {
+        display: inline-block;
+        width: 20px;
+    }
+
+    .delete-absence-btn,
+    .excuse-absence-btn,
+    .delete-mark-btn,
+    .delete-semestrial-test-paper-btn,
+    .delete-semestrial-average,
+    .expand-add-semestrial-test-paper-btn,
+    .expand-add-semestrial-average-btn {
+        vertical-align: baseline;
     }
 
     /* end spinner icon */
@@ -107,9 +126,6 @@
 
 {{#each subjects}}
 
-{{!-- {{{toJSON this}}}
-<div>--------</div>
-{{toJSON this}} --}}
 <div id="{{id}}" class="subject-container" data-subject-id="{{id}}" data-subject-name="{{name}}">
     <h3 class="font-weight-normal mt-5">{{name}}</h3>
 
@@ -118,45 +134,34 @@
         <ul>
             {{#each absences}}
             <li id={{id}}>
-                <span class="absence-value-span {{#if isExcused}}text-success{{/if}}">{{friendlyDate}}</span>
+                <span class="absence-date-span {{#if isExcused}}text-success{{/if}}">{{friendlyDate}}</span>
                 {{#unless isExcused}}
-                <button class="excuse-btn btn btn-link">Motiveza</button> |
+                <button class="excuse-absence-btn btn btn-link">Motiveza</button> |
                 {{/unless}}
-                <button class="delete-btn btn btn-link">Sterge</button>
+                <button class="delete-absence-btn btn btn-link">Sterge</button>
             </li>
             {{/each}}
         </ul>
 
         <button class="expand-add-absence-btn btn btn-sm btn-primary ml-4 mt-1">Adauga absente</button>
-
     </div>
 
-    <div class="marks-container ml-4 mt-4" data-test="aaa">
+    <div class="marks-container ml-4 mt-4">
         <div class="font-weight-bold">Note:</div>
-
-        <ul class="marks-list-container" data-test="bbb">
+        <ul>
             {{#each marks}}
             <li id={{id}}>
-                <span>{{value}}</span>
-                <span class="text-muted">/ {{date}}</span>
-                <button type="button" class="delete-btn btn btn-link">Sterge</button>
+                <span class="mark-value-span">{{value}}</span>
+                <span class="mark-date-span text-muted">/ {{friendlyDate}}</span>
+                <button class="delete-mark-btn btn btn-link">Sterge</button>
             </li>
             {{/each}}
         </ul>
 
-        <div class="marks-add-container ml-4">
-            <div class="form-inline">
-                <input type="number" class="mark-value form-control form-control-sm" style="width:70px">
-                <span class="text-muted text-center" style="width:12px"> / </span>
-                <input type="number" class="mark-date form-control form-control-sm" style="width:100px">
-                <button class="add-mark-btn btn btn-primary btn-sm ml-2">Adauga nota</button>
-            </div>
-            <small class="text-muted">Ex: 8 / 17.04</small>
-            <br>
+        <button class="expand-add-mark-btn btn btn-sm btn-primary ml-4 mt-1">Adauga note</button>
 
-        </div>
 
-        <div class="sem-test-paper-container  ml-4 mt-4">
+        {{!-- <div class="sem-test-paper-container  ml-4 mt-4">
             <div class="font-weight-bold">Teza:</div>
             <div class="ml-4 form-inline">
                 <input type="number" class="form-control form-control-sm" style="width:70px">
@@ -170,10 +175,32 @@
                 <input type="number" class="form-control form-control-sm" style="width:70px">
                 <button type="submit" class="btn btn-primary btn-sm ml-2" style="width:120px">Adauga media</button>
             </div>
-        </div>
+        </div> --}}
 
-        <hr class="mt-5" />
     </div>
+
+    <div class="semestrial-test-paper-container ml-4 mt-4">
+        <span class="font-weight-bold">Teza:</span>
+        {{#if semestrialTestPaper.value}}
+        <span class="font-weight-bold text-danger">{{semestrialTestPaper.value}}</span>
+        <button class="delete-semestrial-test-paper-btn btn btn-link">Sterge</button>
+        {{else}}
+        <button class="expand-add-semestrial-test-paper-btn btn btn-link">Adauga teza</button>
+        {{/if}}
+    </div>
+
+    <div class="semestrial-average-container ml-4 mt-4">
+        <span class="font-weight-bold">Media:</span>
+        {{#if semestrialAverage.value}}
+        <span class="font-weight-bold text-danger">{{semestrialAverage.value}}</span>
+        <span class="text-danger">({{semestrialAverage.valueAsText}})</span>
+        <button class="delete-semestrial-average-btn btn btn-link">Sterge</button>
+        {{else}}
+        <button class="expand-add-semestrial-average-btn btn btn-link">Adauga media</button>
+        {{/if}}
+    </div>
+
+    <hr class="mt-5" />
     {{/each}}
 
 
