--- a/src/web/views/catalog/catalog.hbs
+++ b/src/web/views/catalog/catalog.hbs
@@ -129,6 +129,7 @@
 <div id="{{id}}" class="subject-container" data-subject-id="{{id}}" data-subject-name="{{name}}">
     <h3 class="font-weight-normal mt-5">{{name}}</h3>
 
+    {{#unless isEducationalClass}}
     <div class="absences-container ml-4 mt-4">
         <div class="font-weight-bold">Absente:</div>
         <ul>
@@ -145,7 +146,9 @@
 
         <button class="expand-add-absence-btn btn btn-sm btn-primary ml-4 mt-1">Adauga absente</button>
     </div>
+    {{/unless}}
 
+    {{#unless isEducationalClass}}
     <div class="marks-container ml-4 mt-4">
         <div class="font-weight-bold">Note:</div>
         <ul>
@@ -161,6 +164,7 @@
         <button class="expand-add-mark-btn btn btn-sm btn-primary ml-4 mt-1">Adauga note</button>
 
     </div>
+    {{/unless}}
 
     {{#if hasSemestrialTestPaper}}
     <div class="semestrial-test-paper-container ml-4 mt-4">
