--- a/src/web/views/gradebook/gradebook.hbs
+++ b/src/web/views/gradebook/gradebook.hbs
@@ -194,16 +194,8 @@
     <hr class="mt-5" />
     {{/each}}
 
-
-    {{!-- <script type="text/x-template" id="app-data-template">
-    {{{toJSON this }}}
-    </script> --}}
-
     <script type="text/x-template" id="ui-state">{{{toJSON uiState }}}</script>
-    {{!-- <script type="text/x-template" id="app-data-class">{{{toJSON currentClass }}}</script> --}}
-
 
     {{#section 'script'}}
-    {{!-- <script type="text/javascript" src="/views/student/student-catalog.js" defer></script> --}}
-    <script type="module" src="/views/catalog/main.js"></script>
+    <script type="module" src="/views/gradebook/main.js"></script>
     {{/section}}
