--- a/src/web/views/class/class-teachers.hbs
+++ b/src/web/views/class/class-teachers.hbs
@@ -2,7 +2,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="#">Acasa</a></li>
         <li class="breadcrumb-item"><a href="/clase">Clase</a></li>
-        <li class="breadcrumb-item"><a href="/clase/{{class._id}}">Clasa {{class.name}}</a></li>
+        <li class="breadcrumb-item"><a href="/clase/{{class._id}}">{{class.name}}</a></li>
         <li class="breadcrumb-item active" aria-current="page">Profesori</li>
     </ol>
 </nav>
